# SoulSpark

./: .gitignore  DayDayUp.pyw  DayDayUp.spec  LICENSE  README.md  SoulSpark.spec  main.pyw  main.spec  makefile  pyproject.toml  requirements.txt
src/: config.py  main.pyw
src/Config/: config.py
src/Mutex/: __init__.py  mutex.py
src/State/: __init__.py  ui_state.py  ui_state_handlers.py  ui_state_words.py
src/Tools/: __init__.py  quotes_manager.py
src/Tray/: __init__.py  stray.py  tray.py  tray_icon.py  tray_inform.py
src/UI/: __init__.py  app_state.py  show_click.py  ui.py  ui_bottom.py  ui_display.py  ui_main.py  ui_state.py  ui_top.py
src/Words/: __init__.py  utils.py  words.py
