[project]
name = "pyscript-daydayup"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "config>=0.5.1",
    "olefile>=0.47",
    "pillow>=10.4.0",
    "pystray>=0.19.5",
    "customtkinter>=5.2.0",
    "pywin32>=311",
    "win11toast>=0.35",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
